syntax = "proto3";
package faceitpb;
option go_package = "internal/faceitpb";

message User {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string nickname = 4;
  string password = 5;
  string email = 6;
  string country = 7;
  string createdAt = 8;
  string updatedAt = 9;
}

message CreateUserRequest {
  string firstName = 2;
  string lastName = 3;
  string nickname = 4;
  string password = 5;
  string password_confirm = 6;
  string email = 7;
  string country = 8;
  string createdAt = 9;
  string updatedAt = 10;
}

message CreateUserResponse {
  string id = 1;
}

message DeleteUserRequest {
  string id = 1;
}

message GetUsersRequest {
  uint32 limit = 1;
  uint32 offset = 2;
  string id = 3;
  string country = 4;
  string first_name = 5;
  string last_name = 6;
  string nickname = 7;
}

message GetUsersResponse {
  repeated User data = 1;
}